# uefi-rs-sample

./: Cargo.toml  OVMF_CODE.fd  README.md  app.nsh  build.sh  run.sh
src/: common.rs  main.rs  shell.rs
