[package]
name = "uefi-rs-sample"
version = "0.1.0"
authors = ["irieryota <ryotairie123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { path = "./uefi-rs" }
uefi-services = { path = "./uefi-rs/uefi-services" }